:bug: Make section scrollbar invisible on safari

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,9 +35,14 @@ section {
         display: block;
         overflow: auto;
         padding-bottom: 22px;
-        
+
+        // Make scrollbar invisible        
         &::-webkit-scrollbar {
             display: none;
+            width: 0;
+            height: 0;
+            -webkit-appearance: none;
+            -ms-overflow-style: none;
         }
         
         // Starting at tablet width
